--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@remix-run/dev": "^2.3.1",
     "@remix-run/eslint-config": "^2.3.1",
     "@remix-run/serve": "^2.3.1",
+    "@tailwindcss/typography": "^0.5.13",
     "@types/eslint": "^8.44.8",
     "@types/react": "^18.2.39",
     "@types/react-dom": "^18.2.17",
