--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@supabase/supabase-js": "^2.39.0",
     "@testing-library/cypress": "^10.0.1",
     "cypress": "^13.13.1",
+    "html-react-parser": "^5.1.18",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tiny-invariant": "^1.3.1"
